package com.directi.training.ocp.solution;

public interface SlotFindingStrategy {
    int findFreeSlot();
}
