package com.directi.training.ocp.solution;

public class SpaceSlotFindingStrategy implements SlotFindingStrategy {

    @Override
    public int findFreeSlot() {
        return 0;
    }
    
}
