package com.directi.training.ocp.solution;

public class TimeSlotFindingStrategy implements SlotFindingStrategy {

    @Override
    public int findFreeSlot() {
        return 0;
    }

}
